--- a/package.json
+++ b/package.json
@@ -2,97 +2,49 @@
   "name": "p5.js-tempalte",
   "version": "0.1.0",
   "author": "Shanord Inc.",
-  "browserslist": [
-    "last 2 version",
-    "> 0.5%"
-  ],
   "dependencies": {
-    "autobind-decorator": "^2.4.0",
-    "es-cookie": "^1.3.2",
-    "events": "^3.2.0",
-    "p5": "^1.1.9"
+    "events": "^3.3.0",
+    "p5": "^1.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@babel/plugin-proposal-do-expressions": "^7.10.4",
-    "@babel/plugin-proposal-export-default-from": "^7.10.4",
-    "@babel/plugin-proposal-export-namespace-from": "^7.10.4",
-    "@babel/plugin-proposal-function-bind": "^7.10.5",
-    "@babel/plugin-proposal-function-sent": "^7.10.4",
-    "@babel/plugin-proposal-json-strings": "^7.10.4",
-    "@babel/plugin-proposal-logical-assignment-operators": "^7.11.0",
-    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.10.4",
-    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
-    "@babel/plugin-proposal-optional-chaining": "^7.11.0",
-    "@babel/plugin-proposal-pipeline-operator": "^7.10.5",
-    "@babel/plugin-proposal-throw-expressions": "^7.10.4",
+    "@babel/core": "^7.14.5",
+    "@babel/plugin-proposal-class-properties": "^7.14.5",
+    "@babel/plugin-proposal-decorators": "^7.14.5",
+    "@babel/plugin-proposal-do-expressions": "^7.14.5",
+    "@babel/plugin-proposal-export-default-from": "^7.14.5",
+    "@babel/plugin-proposal-export-namespace-from": "^7.14.5",
+    "@babel/plugin-proposal-function-bind": "^7.14.5",
+    "@babel/plugin-proposal-function-sent": "^7.14.5",
+    "@babel/plugin-proposal-json-strings": "^7.14.5",
+    "@babel/plugin-proposal-logical-assignment-operators": "^7.14.5",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.14.5",
+    "@babel/plugin-proposal-numeric-separator": "^7.14.5",
+    "@babel/plugin-proposal-optional-chaining": "^7.14.5",
+    "@babel/plugin-proposal-pipeline-operator": "^7.14.5",
+    "@babel/plugin-proposal-throw-expressions": "^7.14.5",
     "@babel/plugin-syntax-import-meta": "^7.10.4",
-    "@babel/plugin-transform-runtime": "^7.11.0",
-    "@babel/polyfill": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-flow": "^7.10.4",
-    "@babel/runtime": "^7.11.1",
-    "@prettier/plugin-php": "^0.14.3",
-    "autoprefixer": "^9.8.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-flow": "^7.14.5",
+    "@babel/runtime": "^7.14.5",
     "babel-env": "^2.4.1",
-    "babel-loader": "^8.1.0",
-    "browser-sync": "^2.26.12",
-    "chalk": "^4.1.0",
-    "css-loader": "^4.2.0",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
-    "dotenv": "^8.2.0",
+    "babel-loader": "^8.2.2",
+    "browser-sync": "^2.26.14",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "dotenv-safe": "^8.2.0",
-    "dotenv-webpack": "^2.0.0",
-    "exports-loader": "^1.1.0",
-    "expose-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "file-loader": "^6.0.0",
-    "flow-bin": "^0.130.0",
-    "fs-extra": "^9.0.1",
-    "ftp-client": "^0.2.2",
-    "imagemin": "^7.0.1",
-    "imagemin-jpegtran": "^7.0.0",
-    "imagemin-mozjpeg": "^9.0.0",
-    "imagemin-pngquant": "^9.0.0",
-    "imagemin-svgo": "^8.0.0",
-    "imports-loader": "^1.1.0",
-    "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.14.1",
-    "node-sass-glob-importer": "^5.3.2",
+    "dotenv-webpack": "^7.0.3",
+    "file-loader": "^6.2.0",
+    "flow-bin": "^0.152.0",
     "npm-run-all": "^4.1.5",
-    "parallel-webpack": "^2.6.0",
     "path": "^0.12.7",
-    "postcss-loader": "^3.0.0",
-    "prettier": "^2.0.5",
-    "prettier-plugin-twig-melody": "^0.4.6",
-    "promise": "^8.1.0",
-    "sass-loader": "^9.0.2",
-    "style-loader": "^1.2.1",
-    "stylelint": "^13.6.1",
-    "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-recommended-scss": "^4.2.0",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.18.0",
-    "terser-webpack-plugin": "^4.0.0",
-    "url-loader": "^4.1.0",
-    "webpack": "^4.44.1",
-    "webpack-bundle-analyzer": "^3.8.0",
-    "webpack-merge": "^5.1.1"
+    "prettier": "^2.3.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.38.1"
   },
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "build": "NODE_ENV=production npm-run-all --parallel clean build:*",
-    "build:image": "node scripts/image",
-    "build:webpack": "node scripts/build",
-    "clean": "node scripts/clean",
-    "fix:style": "stylelint **/*.scss --fix",
-    "lint:flow": "flow",
-    "lint:style": "stylelint **/*.scss",
     "server": "node scripts/server",
-    "start": "npm run clean && npm run build:image & node scripts/webpack"
+    "start": "node scripts/webpack"
   }
 }
